<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <!-- Notification strings -->
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <!-- MainActivity strings -->
    <string name="button_loading">We are loading </string>
    <string name="glide_radio_button">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_radio_button">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_button">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download">Download</string>
    <string name="select_file_for_download">Please select the file to download</string>
    <string name="download_complete">Download complete</string>

    <!-- DetailActivity strings -->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="fab_content_description_return_to_main_activity">Return to the MainActivity</string>
    <string name="download_image_content_description">Download image</string>
</resources>