<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/default_padding"
    android:paddingBottom="@dimen/default_padding"
    app:layoutDescription="@xml/content_main_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/download_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/glide_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glide_radio_button" />

        <RadioButton
            android:id="@+id/loadapp_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadapp_radio_button" />

        <RadioButton
            android:id="@+id/retrofit_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_radio_button" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:buttonBackgroundColor="@color/colorPrimary"
        app:buttonTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.udacity.LoadingIndicator
        android:id="@+id/loading_indicator"
        android:layout_width="@dimen/loading_indicator_size"
        android:layout_height="@dimen/loading_indicator_size"
        android:layout_marginEnd="@dimen/default_padding"
        app:layout_constraintBottom_toBottomOf="@id/custom_button"
        app:layout_constraintEnd_toEndOf="@id/custom_button"
        app:layout_constraintTop_toTopOf="@id/custom_button"
        tools:background="@color/colorPrimary" />

</androidx.constraintlayout.motion.widget.MotionLayout>