<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@+id/file_name_label"
            style="@style/LabelTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/file_name"
            app:layout_constraintEnd_toStartOf="@id/file_name"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/file_name"
            style="@style/ValueTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="false"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/file_name_label" />

        <Constraint
            android:id="@+id/status_label"
            style="@style/LabelTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/status"
            app:layout_constraintEnd_toStartOf="@id/status"
            app:layout_constraintTop_toBottomOf="@id/file_name" />

        <Constraint
            android:id="@+id/status"
            style="@style/ValueTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/status_label"
            tools:text="Fail" />

        <Constraint
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent" />

    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
        <Constraint
            android:id="@+id/file_name_label"
            style="@style/LabelTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/file_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/file_name"
            style="@style/ValueTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:ellipsize="end"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/file_name_label"
            app:layout_constraintTop_toTopOf="@id/file_name_label"
            tools:text="Retrofit - Type-safe HTTP client for Android and Java by Square, Inc." />

        <Constraint
            android:id="@+id/status_label"
            style="@style/LabelTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/file_name" />

        <Constraint
            android:id="@+id/status"
            style="@style/ValueTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/file_name"
            app:layout_constraintTop_toTopOf="@id/status_label"
            tools:text="Fail" />

        <Constraint
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </ConstraintSet>

    <Transition
        app:constraintSetEnd="@id/end"
        app:constraintSetStart="@+id/start"
        app:autoTransition="animateToEnd"
        app:duration="1500" />
</MotionScene>